change classes' name + some types from java classical classes to T... classes